[metadata]
name = testest
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Not for distribution. Playing around with automated testing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/testest
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = testest
package_dir =
    =src
install_requires =
    # click

[options.entry_points]
console_scripts = 
    # exename = package.module:funcname
